input text field overlap prevention

--- a/static/jquery.mobile-1.0.1.css
+++ b/static/jquery.mobile-1.0.1.css
@@ -1771,7 +1771,7 @@ label.ui-select { font-size: 16px; line-height: 1.4;  font-weight: normal; margi
 /* TODO when the custom select css us moved out to it's own file this should be included */
 .ui-li-static .ui-select .ui-li-count { right: 38px; }
 label.ui-input-text { font-size: 16px; line-height: 1.4; display: block; font-weight: normal; margin: 0 0 .3em; }
-input.ui-input-text, textarea.ui-input-text { background-image: none; padding: .4em; line-height: 1.4; font-size: 16px; display: block; width: 97%; }
+input.ui-input-text, textarea.ui-input-text { background-image: none; padding: .4em; line-height: 1.4; font-size: 16px; display: block; width: 75%; }
 input.ui-input-text { -webkit-appearance: none; }
 textarea.ui-input-text { height: 50px; -webkit-transition: height 200ms linear; -moz-transition: height 200ms linear; -o-transition: height 200ms linear; transition: height 200ms linear; }
 .ui-input-search { padding: 0 30px; background-image: none; position: relative; }
